# datapluse

./: .dockerignore  .env.example  .env.prod  .env.stg  .gitattributes  .gitignore  Claude.md  Dockerfile  README.md  build.sh  changed_files.txt  config.example.yaml  pyproject.toml  start.py  start.sh
backend/: main.py
backend/api/: annotation.py  auth.py  config.py  data.py  datasets.py  export.py  pipeline.py  templates.py  users.py
backend/config/: settings.py
backend/modules/: conflict.py  embedding.py  model.py  processing.py  vector.py
backend/pipeline/: engine.py
backend/storage/: db.py  embeddings.py  models.py  nas.py
backend/tools/: hash_password.py  seed_admin.py
database/: common.sql  init.sql
db/arkpg/: 20260428_arkpgdata_init.sql  20260501_arkpgdata_add_category.sql  20260501_arkpgdata_add_embed_job_column.sql  20260505_arkpgdata_add_work_volume.sql  20260508_arkpgdata_add_annotation_cot_fields.sql  20260627_arkpgdata_add_eval_prompt.sql  20260627_arkpgdata_add_eval_tables.sql  20260628_arkpgdata_add_eval_category.sql  20260630_arkpgdata_add_eval_activity.sql  20260630_arkpgdata_eval_worker_claim.sql  20260701_arkpgdata_add_eval_review.sql  20260701_arkpgdata_add_eval_rule.sql  20260704_arkpgdata_add_eval_started_at.sql  20260705_arkpgdata_eval_row_expr_index.sql  20260705_arkpgdata_rbac_roles.sql  20260706_arkpgdata_eval_activity_name.sql  20260706_arkpgdata_eval_row_flatten.sql  20260710_arkpgdata_eval_rule_ruleset.sql  20260715_arkpgdata_add_user_nickname.sql  20260717_arkpgdata_eval_row_ask_date.sql  20260717_arkpgdata_eval_row_source.sql  20260717_arkpgdata_eval_task_file.sql  template_bulk_import_annotated.sql
db/eval_samples/: life_dialog_calib.xlsx  life_dialog_prod.xlsx  pa_dialog_eval_sample.xlsx  securities_dialog_prod_3000.xlsx
deploy_desc/: SUPER-AGENT1.0.0.json
docs/: ai_eval_guide.md  eval_subset_rerun_design.md
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js.timestamp-1775820023639-4b3099b45318.mjs
frontend/docs/: changelog.md  faq.md  index.md
frontend/public/: eval-guide.html
frontend/src/: App.jsx  index.css
nas/: README.md
plans/: 00-overview.md  01-architecture.md  02-data-model.md  03-api-reference.md  04-changelog.md
scripts/: analyze_answer_length.py  answer_coverage.py  clean_orphan_data.py  common.sql  debug.py  extract_rules.py
tools/: hash_password.py  seed_admin.py
(+229 files in other folders)
